--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 *{
     margin: 0;
@@ -6,6 +7,7 @@
     font-family: "Inter", sans-serif;
 }
 .titulo{
+    font-family: "Archivo Black", sans-serif;
     font-size: 40px;
 }
 .menu{
@@ -13,21 +15,153 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-image:linear-gradient(90deg, rgba(200,200,200,1) 0%, rgba(231,231,231,0.9529061624649859) 35%, rgba(255,255,255,1) 100%);
+    opacity: 90%;
 }
 ul{
     display: flex;
-    gap: 4rem;
+    gap: 2rem;
 }
 li{
     list-style: none;
 }
 ul a{
-    font-size: 20px;
+    font-size: 25px;
     text-decoration: none;
     color: black;
-    transition: 0.2s;
+    transform: 0.2s;
 }
 ul a:hover{
-    color: #ea0063;
-    border-bottom: 2px solid #ea0063;
+    color: #43569b;
+    border-bottom: 2px solid #43569b;
+}
+
+.principal{
+    padding: 4rem;
+    display: flex;
+    justify-content: space-around;
+    gap: 3rem;
+    flex-wrap: wrap;
+}
+.secao_1{
+    padding: 1rem;
+    width: 600px;
+    height: 400px;
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    box-shadow: 0px 0px 10px 0px black;
+    border-radius: 30px;
+}
+.secao_1:hover{
+    scale: 1.1;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.secao_2{
+   /* background-color: rgba(128, 128, 128, 0.23);*/
+    background-image: url(img/imagem3.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    backdrop-filter: 80%;
+    border-radius: 30px;
+    width: 700px;
+    height: auto;
+    display: flex;
+    justify-content: end; 
+    align-items: flex-end;
+}
+.img{
+    height: 100%;
+}
+.img:hover{
+    scale: 1.1;
+    transition: 0.4s;
+    cursor: pointer;
+}
+.categorias{
+    display: flex;
+    margin: 2rem 4rem;
+    gap: 6rem;
+}
+.card1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    height: auto;
+    border-radius: 40px;
+    border: 2px solid black;
+}
+.card2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    height: auto;
+    border-radius: 40px;
+    border: 2px solid black;
+}
+.card3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    height: auto;
+    border-radius: 40px;
+    border: 2px solid black;
+}
+
+#card:hover{
+    cursor: pointer;
+    background-color: black;
+    opacity: 80%;
+    color: white;
+}
+
+.imagens_1{
+    background-color: black;
+    display: flex;
+    gap: 3rem;
+}
+.imagens_2{
+    display: flex;
+}
+.imagens_3{
+    background-color: black;
+    display: flex;
+    gap: 3rem;
+}
+.textos{
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    padding: 1rem;
+    justify-content: center;
+    color: white;
+}
+.textos_2{
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    padding: 1rem;
+    justify-content: center;
+    color: black;
+}
+.oceano{
+    height: 500px;
+    width: auto;
+}
+.neve{
+    height: 500px;
+    width: auto;
+}
+.jogo{
+    height: 500px;
+    width: auto;
 }
