--- a/jucao/style.css
+++ b/jucao/style.css
@@ -207,3 +207,44 @@ ul a:hover{
 #btn{
     cursor: pointer;
 }
+/* Final cadastro*/
+
+.literatura{
+    padding: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+    background-color: black;
+}
+
+.final-flash{
+    font-size: 40px;
+    color: white;
+}
+#textoss{
+    border: 2px solid white;
+    background-color: transparent;
+    color: white;
+    padding: 12px;
+    font-size: 14px;
+    border-radius: 20px;
+}
+#send{
+    padding: 1rem;
+    font-size: 18px;
+    width: 200px;
+    border-radius: 40px;
+    border: 3px solid white;
+    background-color: transparent;
+    color: white;
+}
+#send:hover{
+    scale: 1.1;
+    cursor: pointer;
+}
+#texto-frente{
+    color: white;
+    font-size: 18px;
+}
