--- a/jucao/style.css
+++ b/jucao/style.css
@@ -90,6 +90,7 @@ ul a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
@@ -101,6 +102,7 @@ ul a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
@@ -112,6 +114,7 @@ ul a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
@@ -188,6 +191,7 @@ ul a:hover{
     flex-direction: column;
 }
 .button{
+    backdrop-filter: blur(10px);
     position: sticky;
     border: 2px solid black;
     border-radius: 30px;
@@ -216,7 +220,7 @@ ul a:hover{
     align-items: center;
     flex-direction: column;
     gap: 4rem;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.904);
 }
 
 .final-flash{
@@ -246,5 +250,6 @@ ul a:hover{
 }
 #texto-frente{
     color: white;
-    font-size: 18px;
+    font-size: 26px;
 }
+/*POPUP*/
